# micro-transformers

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/core/: Node.h  Tape.h  Value.h
include/nn/: Linear.h
include/nn/layers/: Layer.h  Linear.h  ReLU.h  Tanh.h
include/nn/models/: MLP.h
include/nn/optimizers/: SGD.h
src/: CMakeLists.txt
src/core/: Tape.cpp  Value.cpp
src/nn/layers/: Linear.cpp  ReLU.cpp  Tanh.cpp
src/nn/models/: MLP.cpp
src/nn/optimizers/: SGD.cpp
